# reverse-interview-analyser

./: .dockerignore  .editorconfig  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  USER_MANUAL.md  cliff.toml  pyproject.toml  requirements.txt
app/: config.py  main.py
app/features/: gap_analysis.py  hidden_skills.py  hiring_manager_sim.py  interview_questions.py  prep_plan.py  readiness_score.py
app/i18n/: prompts.py  strings.py
app/llm/: client.py  factory.py
app/parsing/: resume_parser.py
docs/: LANGUAGE_QUALITY_NOTES.md
spec-kit/.specify/memory/: constitution.md
spec-kit/.specify/templates/: plan-template.md  spec-template.md  tasks-template.md
spec-kit/specs/001-core-checklist/: plan.md  spec.md  tasks.md
tests/: test_gap_analysis.py  test_hidden_skills.py  test_interview_questions.py  test_llm_factory.py  test_readiness_score.py  test_resume_parser.py
