[project]
name = "interviewiq"
version = "0.1.0"
description = "AI-powered interview readiness assistant"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
dependencies = [
    "streamlit>=1.35",
    "google-generativeai>=0.7",
    "requests>=2.31",
    "pymupdf>=1.24",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-requests",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
disallow_untyped_defs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=app --cov-report=term-missing"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
